<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/home_icon"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_modelo"
        android:icon="@drawable/proyectos_icon"
        android:title="@string/menu_model" />

    <item
        android:id="@+id/nav_registrar_profesor"
        android:icon="@drawable/proyectos_icon"
        android:title="Registrar Profesor"/>

    <item
        android:id="@+id/nav_administrar_usuarios"
        android:icon="@drawable/proyectos_icon"
        android:title="Administrar usuarios"/>
    <item
        android:id="@+id/nav_caracteristicas"
        android:icon="@drawable/mapa_icon"
        android:title="@string/menu_caracteristicas" />

    <item
        android:id="@+id/nav_competencias"
        android:icon="@drawable/competencias_icon"
        android:title="@string/menu_competencias" />

    <item
        android:id="@+id/nav_tutores"
        android:icon="@drawable/tutor_icon"
        android:title="Tutores" />

    <item
        android:id="@+id/nav_evaluacion"
        android:icon="@drawable/quiz_icon"
        android:title="Simula tu Evaluación" />

    <item
        android:id="@+id/nav_juego"
        android:icon="@drawable/juegos_icon"
        android:title="@string/menu_game" />

    <item
        android:id="@+id/nav_carrera_video"
        android:icon="@drawable/proyectos_icon"
        android:title="@string/menu_videocarrera"/>

    <item
        android:id="@+id/nav_historieta"
        android:icon="@drawable/historietas_icon"
        android:title="@string/menu_historia" />

    <item
        android:id="@+id/nav_acerca"
        android:icon="@drawable/info_icon"
        android:title="@string/menu_about" />

</menu>